--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,27 +6,13 @@
         <div>
             <h1><a href="/">Django Girls Blog</a></h1>
         </div>
-
-        <div>
-            <h2><a href="">My first post</a></h2>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <ul>
-            	<li>First li</li>
-            	<li>Second li</li>
-            	<li>Third li
-            		<ol>
-            			<li>First subli</li>
-            			<li>Second subli</li>
-            		</ol></li>
-            	<li>Fourth li</li>
-            </ul>
-            <em>published: 14.06.2014, 12:14</em>
-        </div>
-
-        <div>
-           <h2><a href="">My second post</a></h2>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut f.</p>
-             <p>published: 14.06.2014, 12:14</p>
-        </div>
+        
+        {% for post in posts %}
+        	<div>
+        		<h2><a href="">{{ post.title }}</a></h2>
+        		<p>{{ post.text|linebreaksbr }}</p>
+        		<em>published: {{ post.published_date }}</em>
+        	</div>
+        {% endfor %}
     </body>
 </html>
