--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,18 +1,14 @@
-<html>
-    <head>
-        <title>Django Girls blog</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="/">Django Girls Blog</a></h1>
-        </div>
-        
-        {% for post in posts %}
-        	<div>
-        		<h2><a href="">{{ post.title }}</a></h2>
-        		<p>{{ post.text|linebreaksbr }}</p>
-        		<em>published: {{ post.published_date }}</em>
-        	</div>
-        {% endfor %}
-    </body>
-</html>
+{% extends 'blog/base.html' %}
+
+{% block content %}
+{% for post in posts %}
+	<div class="post">
+		<h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+		<p>{{ post.text|linebreaksbr }}</p>
+		<div class="date">
+			<em>Опубликовано: {{ post.published_date }}</em>
+		</div>
+	</div>
+{% endfor %}
+{% endblock %}
+        		
