--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -7,6 +7,9 @@
 				<em>Опубликовано: {{ post.published_date }}</em>
 			</div>
 		{% endif %}
+			{% if user.is_authenticated %}
+				<a class="btn btn-default" id="edit-pencil" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+			{% endif %}
 			<h1>{{ post.title }}</h1>
 			<p>{{ post.text|linebreaksbr }}</p>
 	</div>
